--- a/Styles/home-styles.css
+++ b/Styles/home-styles.css
@@ -3,28 +3,14 @@ body{
 	margin:0;
   position: relative;
 }
-/*---------Div Styles----------*/
-#menu{
-  height: 70px;
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  background-color: #cac1c5;
-  width: 100%;
-  opacity: 0.97;
-  display: flex;
-  align-items: center;
-  z-index: 10;
-/*	box-shadow: 0px 9px 10px 0.5px rgba(0,0,0,0.75);*/
+
+a{
+  text-decoration: none;
 }
 
+/*---------Div Styles----------*/
 .div-text{
 	width: 100%;
-}
-
-.menu-items{
-  width:100%;
-  margin-right: 50px;
 }
 
 #div-products{ 
@@ -61,18 +47,6 @@ body{
   margin: 1% 30%;
 }
 
-.menu-item-txt{
-  font-family: 'Noto Sans SC', sans-serif;
-  color: #4b3a41;
-  font-weight: 400;
-  font-size: 15px;
-  letter-spacing: 0.02em;
-  line-height: 1.8em;
-  text-align: right;
-  margin: 3% 0 3% 4%;
-  float: right;
-}
-
 .light{
   color:#efeced;
 }
@@ -101,10 +75,7 @@ body{
 }
 
 /*---------Image/Video Styles----------*/
-.logo-img{
-  width: 35px;
-  margin: 50px;
-}
+
 
 .logo-gif{
 	width:170px;
