--- a/Styles/share-styles.css
+++ b/Styles/share-styles.css
@@ -51,3 +51,13 @@ body{
   margin: 20px;
   width:40%;
 }
+
+/*---------Document Text Styles----------*/
+.body{
+	font-family: 'Noto Sans SC', sans-serif;
+  color: #4b3a41;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.8em;
+  margin: 1% 30%;
+}
