--- a/Styles/explore-styles.css
+++ b/Styles/explore-styles.css
@@ -22,3 +22,12 @@ text {
 #container{
   padding-top:70px;
 }
+
+.body{
+	font-family: 'Noto Sans SC', sans-serif;
+  color: #4b3a41;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.8em;
+  margin: 1% 30%;
+}
