update populate html v1

--- a/Styles/explore-styles.css
+++ b/Styles/explore-styles.css
@@ -19,17 +19,29 @@ text {
   height: 1000px;
   background-color: white;
 }
+
 #container{
   padding-top:70px;
 }
 
-.body{
+.explore-body{
 	font-family: 'Noto Sans SC', sans-serif;
   color: #4b3a41;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8em;
-  margin: 1% 30%;
+}
+
+.explore-title{
+  font-family: 'Noto Sans SC', sans-serif;
+  color: #4b3a41;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.8em; 
+}
+
+#populate-html-content{
+  margin: 5% 10%;
 }
 
 a{
