--- a/Styles/share-styles.css
+++ b/Styles/share-styles.css
@@ -43,9 +43,9 @@ body{
 }
 
 .page-title{
-	font-family: 'Noto Sans', sans-serif;
+	font-family: 'Unna', serif;
   color: #4b3a41;
-  font-size: 19px;
+  font-size: 21px;
   font-weight: 400;
   letter-spacing: 0.02em;
   margin: 20px;
